--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background: url(../assets/img/IMG_3039-78.jpg) no-repeat fixed;
+    background: url(../assets//img/IMG_3039-78.jpg) no-repeat fixed;
     background-size: cover;
     font-size: 10px;
     color: #333;
@@ -29,21 +29,61 @@ h5 {
     font-family: 'Capture it';
     font-weight: 100;
     letter-spacing: 2px;
+    margin-bottom: 20px !important;
+    margin-top: 20px;
     text-transform: uppercase;
 }
 
+
+/* h1 {
+    font-size: 2em !important;
+} */
+
 p {
+    font-size: 1.6em;
     margin: 20px 0;
 }
 
+ul {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+ul li {
+    font-size: 1.6em;
+    list-style: disc;
+    margin-bottom: 10px;
+    margin-left: 40px;
+}
+
 blockquote {
-    font-family: 'Bad Script', cursive;
-    font-size: 3em;
-    width: 60%;
+    border-left: 3px solid #105A84;
+    display: block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 2em;
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding-left: 10px;
+    width: 80%;
 }
 
 cite {
     font-size: 2em;
+}
+
+a.btn {
+    display: block;
+    background-color: #2B6BA0;
+    color: #fff;
+    height: 50px;
+    font-size: 1.5em;
+    padding: 15px;
+    margin: 0 auto;
+    text-align: center;
+    text-transform: uppercase;
+    width: 150px;
 }
 
 .wrapper {
@@ -60,7 +100,6 @@ cite {
     align-items: center;
     position: relative;
     width: 100%;
-    @apply flex-col md: flex-row;
 }
 
 .header {
@@ -99,7 +138,7 @@ cite {
     /* box-shadow: 0px 4px 4px rgb(0 0 0 / 25%); */
     color: #fff;
     display: flex;
-    font-size: 1.8em;
+    font-size: 1.9em;
     font-weight: 600;
     justify-content: space-around;
     align-items: center;
@@ -108,10 +147,14 @@ cite {
 }
 
 .topnav a {
-    /* color: #2b6ba0; */
+    color: #fff;
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
+}
+
+.topnav a:hover {
+    color: #88B5DC;
 }
 
 .topnav a img {
@@ -148,9 +191,10 @@ cite {
     background-size: cover;
     border-left: 105px solid transparent;
     border-right: 105px solid transparent;
-    border-top: 135px solid #1F5B84;
+    border-top: 135px solid #105A84;
     width: 0;
     height: 0;
+    margin-right: 10px;
     position: relative;
     display: block;
     z-index: 999;
@@ -228,9 +272,8 @@ cite {
     border-top: 100px solid #fff;
     position: absolute;
     margin: 0 auto;
-    bottom: -136px;
-    left: -27%;
-    right: 0%;
+    bottom: -68px;
+    left: 25%;
     width: 35%;
     transform: translateY(-100%) skewY(188deg);
     transform-origin: left;
@@ -241,9 +284,8 @@ cite {
     border-top: 100px solid #fff;
     position: absolute;
     margin: 0 auto;
-    bottom: 64px;
-    left: 27%;
-    right: 0%;
+    bottom: 133px;
+    right: 25%;
     width: 35%;
     transform: translateY(100%) skewY(352deg);
     transform-origin: right;
@@ -275,8 +317,9 @@ h3.hero__slogan-sub::before {
 
 .stats__counter {
     text-align: center;
-    margin-top: 50px;
-    width: 25%;
+    /* margin-top: 50px; */
+    min-width: 33%;
+    width: auto;
 }
 
 .stats__counter span {
@@ -294,15 +337,28 @@ h3.hero__slogan-sub::before {
 
 .news {
     background-color: #88B5DC;
-    justify-content: space-around;
+    justify-content: center;
+    justify-items: stretch;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2rem;
     padding: 50px 20px;
+    z-index: 9999;
 }
 
 .newsblock {
     background-color: #fff;
     height: 400px;
     width: 300px;
-    @apply shadow-lg hover: shadow-xl;
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.newsblock:hover {
+    --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .newsblock__image {
@@ -326,19 +382,20 @@ h3.hero__slogan-sub::before {
 
 .target {
     justify-content: center;
-    gap: 2rem;
-    height: 400px;
-    padding: 50px;
+    gap: 5rem;
+    justify-items: stretch;
+    padding: 50px 70px;
     z-index: 9999;
 }
 
 .target_img {
     height: 250px;
     position: relative;
-    width: 40%;
+    /* width: 40%; */
 }
 
 .target_img img {
+    -o-object-fit: cover;
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -361,28 +418,32 @@ h3.hero__slogan-sub::before {
 .target__desc {
     align-self: baseline;
     color: #333;
-    font-size: 2em;
-    width: 30%;
+    font-size: 1.2em;
+    line-height: 1.5;
+    /* width: 30%; */
 }
 
 .exhibit__desc {
     background-color: #2b6ba0;
     color: #fff;
-    font-size: 1.8em;
+    font-size: 1.2em;
+    line-height: 1.2;
     height: 100%;
     padding: 50px;
     position: relative;
-    width: 60%;
     z-index: 999;
-    @apply w-full md: w-2/4
+    width: 100%
+}
+
+.exhibit__desc h2 {
+    font-size: 1.5em;
 }
 
 .exhibit__img {
     border: 4px solid #2B6BA0;
     height: 100%;
     position: relative;
-    width: 40%;
-    @apply w-full md: w-2/4
+    width: 100%
 }
 
 .exhibit__img-overlay {
@@ -436,18 +497,21 @@ h3.hero__slogan-sub::before {
 }
 
 .exhibit__img img {
+    -o-object-fit: contain;
     object-fit: contain;
     width: 100%;
     height: 100%;
 }
 
 .media {
-    height: 600px;
+    /* height: 600px; */
     flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-evenly;
+    gap: 2rem;
+    justify-content: center;
+    justify-items: stretch;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    padding: 50px 30px;
     z-index: 9999;
 }
 
@@ -458,15 +522,196 @@ h3.hero__slogan-sub::before {
 }
 
 .mediablock img {
+    -o-object-fit: cover;
     object-fit: cover;
     width: 100%;
     height: 100%;
+    transition: transform .5s ease-in-out;
+    -webkit-transition: transform .5s ease-in-out;
+    -moz-transition: transform .5s ease-in-out;
+    -ms-transition: transform .5s ease-in-out;
+    -o-transition: transform .5s ease-in-out;
+}
+
+.mediablock img:hover {
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -o-transform: scale(1.5);
 }
 
 footer {
     background-color: #333;
     border-top: 1px solid#fff;
-    height: 330px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 60px;
     width: 100%;
+}
+
+.footer__contact {
+    color: #fff;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.footer__contact p {
+    font-size: 1em;
+    margin-bottom: 20px;
+}
+
+
+
+/* Inner pages */
+
+.inner__header {
+    /* background: url(../assets/img/IMG_7173-54.jpg) no-repeat fixed; */
+    /* background-size: cover; */
+    /* background-position: bottom; */
+    height: 400px;
+    flex-direction: column;
+    position: relative;
+    /* position: relative;
+    top: 70px; */
+}
+
+.inner__header h1 {
+    color: #fff;
+    font-size: 4em;
+}
+
+.inner__header h2 {
+    color: #fff;
+    font-size: 2.5em;
+}
+
+.inner__image {
+    height: 400px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.inner__image img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.inner__desc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    text-align: center;
+    left: 0;
+    z-index: 99;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    background-color: rgba(0,0,0,.4);
+}
+
+.content {
+    display: flex;
+    padding: 20px 50px;
+    justify-content: space-between;
+}
+
+.content__article {
+    padding: 20px 0 20px 20px;
+    /* max-width: 70%; */
+}
+
+.content p {
+    color: #333;
+    font-size: 1.7em;
+    /* font-weight: 600; */
+    line-height: 1.5;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.content a {
+    color: #105A84 !important;
+    text-decoration: underline !important;
+}
+
+.content h2 {
+    font-size: 2em;
+    text-align: center;
+}
+
+.content h3 {
+    border-bottom: 1px solid #000;
+    font-size: 1.6em;
+    text-align: center;
+}
+
+.inner__pic {
+    border: 10px solid #105A84;
+    /* border-radius: 50%; */
+    float: right;
+    max-height: 300px;
+    /* max-width: 300px; */
+    margin: 10px;
+    /* -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%; */
+}
+
+.sidebar {
+    padding: 20px;
+}
+
+/* Mobile menu */
+
+.topnav-mobile {
+    align-items: center;
+    background-color: #105A84;
+    color: #fff;
+    display: flex;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99999;
+}
+
+.mobile__button {
+    background: url(../assets/img/menu.png) no-repeat;
+    background-size: contain;
+    border: 1px solid transparent;
+    cursor: pointer;
+    height: 80%;
+    margin: 0 0 0 10px;
+    width: 16%;
+}
+
+.mobile__list {
+    background-color: #105A84;
+    bottom: -250px;
+    color: #fff;
+    display: block;
+    padding: 15px 20px;
+    position: absolute;
+    transition: bottom 2s ease-in-out;
+    width: 100%;
+    font-size: 2em;
+}
+
+.closed {
+    display: none !important;
+}
+
+@media (min-width: 768px) {
+    .md\:flex-row {
+        flex-direction: row;
+    }
 }
